# metadata-service-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MANUAL_TESTS.md  MYSQL_SETUP.md  Makefile  PARAMETERS.md  QUICK_REFERENCE.md  QUICK_TESTS.md  README.md  SOLUTION_SUMMARY.md  VERSION.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  setup.bat  setup.sh
alembic/: env.py
alembic/versions/: 001_initial_tables.py
app/: main.py
app/api/: __init__.py  datasets_routes.py  lineage_routes.py  search_routes.py
app/core/: config.py  database.py
app/models/: __init__.py
app/repository/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
app/utils/: __init__.py
tests/: __init__.py  test_api.py  test_utils.py
